@@ -1,6 +1,10 @@
 Revision history for Perl extension Sys::Info::Driver::Linux.
 
 {{$NEXT}}
+     - Fix mem stats.
+     - Fix CPU speed collection.
+     - Fix number of cores.
+     - Detect RPi model.
 
 0.7908 2025-08-16 BURAK
      - Fix for timezone / !6
